--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
     <string name="app_name">Petagram</string>
+    <string name="about_title">Sobre nosotros...</string>
+    <string name="button_send">Enviar Mensaje</string>
+    <string name="contact_title">Contacto</string>
+    <string name="email_edit_text">Email: </string>
+    <string name="name_edit_text">Nombre: </string>
+    <string name="message_edit_text">Mensaje: </string>
+    <string name="cardview_name">Nombre</string>
+    <string name="cardview_rank">5</string>
+    <string name="pet_1">Anahí</string>
+    <string name="pet_2">Aldo</string>
+    <string name="pet_3">Uml</string>
+    <string name="pet_4">Android</string>
+    <string name="pet_5">Java</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
 </resources>
